--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "keywords": [
     "Streaming build library"
   ],
-  "dependencies": {},
+  "dependencies": {
+
+  },
   "author": "Pein Freccs",
   "license": "MIT",
   "repository": {
