--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Design assistance in template",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "es_linter": "eslint lib/event/*.js  *.js --fix"
   },
   "keywords": [
     "Streaming build library"
